adding db.con.php/functions.php files. and login page backend done.

--- a/styles/main.css
+++ b/styles/main.css
@@ -111,6 +111,7 @@ table, th, td:not(.error-row) {
 
 td > [type=checkbox] {
     display: block;
+    margin: 0 auto;
 }
 td > button {
     width: 100%;
