login page is responsive now.

--- a/styles/main.css
+++ b/styles/main.css
@@ -34,6 +34,7 @@ body.login {
     background-image: url("../images/hacker-background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     position: relative;
     display: flex;
     justify-content: center;
@@ -82,7 +83,7 @@ input, textarea, button {
 
 /* login page */
 form {
-    width: 35%;
+    max-width: 350px;
     position: relative;
     z-index: 12;
 }
