--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("variables.css");
+@import url("/styles/variables.css");
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap');
 
 
@@ -18,20 +18,20 @@
 
 /* these .hidden-scrollbar are making scrollbar hidden but still work */
 .hidden-scrollbar::-webkit-scrollbar {
-    width: 0 !important;
     scrollbar-width: thin;
+    width: 0 !important;
 }
 .hidden-scrollbar {
+    scrollbar-width: thin;
     -ms-overflow-style: none;
     overflow: -moz-scrollbars-none;
-    scrollbar-width: thin;
 }
 
 
 body.login {
     height: 100vh;
     width: 100vw;
-    background-image: url("../images/hacker-background.jpg");
+    background-image: url("/images/hacker-background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -147,7 +147,7 @@ label {
 body.chat {
     height: 100vh;
     width: 100vw;
-    background-image: url("../images/matrix.png");
+    background-image: url("/images/matrix.png");
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
